force-app/main/default/objects/RegularServiceInformation__c/RegularServiceInformation__c.object-meta.xml
<CustomObject>
    <label>定期便情報</label>
    <nameField>
        <displayFormat>RSI-{00000000}</displayFormat>
        <label>定期便情報#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>