force-app/main/default/objects/RegularServiceInformation__c/fields/Active_F__c.field-meta.xml
<CustomField>
    <fullName>Active_F__c</fullName>
    <formula>IF( Account__c != null
    , NOT( Account__r.DeliveryContractTermination__c) 
    , IF( ISBLANK(RecurringEndDate__c), TRUE, RecurringEndDate__c &gt;= TODAY() )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>