force-app/main/default/objects/RegularServiceInformation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>運賃手動計算フラグ　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　チェック: 確定運賃　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　チェックなし: 参照運賃</inlineHelpText>
    <label>運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>