force-app/main/default/objects/RegularServiceInformation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>