force-app/main/default/objects/RegularServiceInformation__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>毎月</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PeriodKind__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01日</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02日</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03日</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04日</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05日</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06日</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07日</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08日</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09日</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10日</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11日</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12日</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13日</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14日</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15日</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16日</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17日</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18日</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19日</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20日</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21日</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22日</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23日</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24日</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25日</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26日</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27日</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>28日</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>29日</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30日</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>