force-app/main/default/objects/RegularServiceInformation__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <inlineHelpText>積込日からn日後が納品日となり、nの値をここで入力します</inlineHelpText>
    <label>納品日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>