force-app/main/default/objects/RegularServiceInformation__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>着地</label>
    <referenceTo>OriginDestination__c</referenceTo>
    <relationshipLabel>定期便情報 (着地)</relationshipLabel>
    <relationshipName>RegularServiceInformationDestinationList</relationshipName>
    <type>Lookup</type>
</CustomField>