force-app/main/default/objects/RegularServiceInformation__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>グループ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>