force-app/main/default/objects/RegularServiceInformation__c/fields/InvoiceAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>請求先（集計使用名）</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>定期便情報 (請求先（集計使用名）)</relationshipLabel>
    <relationshipName>RegularServiceInformatInvoiceAccountList</relationshipName>
    <type>Lookup</type>
</CustomField>