force-app/main/default/objects/RegularServiceInformation__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <label>品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>