force-app/main/default/objects/RegularServiceInformation__c/fields/OriginPlace__c.field-meta.xml
<CustomField>
    <fullName>OriginPlace__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>発地</label>
    <referenceTo>OriginDestination__c</referenceTo>
    <relationshipLabel>定期便情報</relationshipLabel>
    <relationshipName>RegularServiceInformationOriginPlaceList</relationshipName>
    <type>Lookup</type>
</CustomField>