force-app/main/default/objects/RegularServiceInformation__c/fields/PeriodKind__c.field-meta.xml
<CustomField>
    <fullName>PeriodKind__c</fullName>
    <label>周期種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <label>月</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>週</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>