force-app/main/default/objects/RegularServiceInformation__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>定期便情報</relationshipLabel>
    <relationshipName>RegularServiceInformationList</relationshipName>
    <type>Lookup</type>
</CustomField>