force-app/main/default/objects/RegularServiceInformation__c/fields/RecurringEndDate__c.field-meta.xml
<CustomField>
    <fullName>RecurringEndDate__c</fullName>
    <label>定期終了日</label>
    <type>Date</type>
</CustomField>