force-app/main/default/objects/RegularServiceInformation__c/fields/RecurringStartDate__c.field-meta.xml
<CustomField>
    <fullName>RecurringStartDate__c</fullName>
    <label>定期開始日</label>
    <type>Date</type>
</CustomField>