force-app/main/default/objects/RegularServiceInformation__c/fields/Remarks1__c.field-meta.xml
<CustomField>
    <fullName>Remarks1__c</fullName>
    <label>備考①</label>
    <type>TextArea</type>
</CustomField>