force-app/main/default/objects/RegularServiceInformation__c/fields/Remarks2__c.field-meta.xml
<CustomField>
    <fullName>Remarks2__c</fullName>
    <label>備考②</label>
    <type>TextArea</type>
</CustomField>