force-app/main/default/objects/RegularServiceInformation__c/fields/ShippingCompany__c.field-meta.xml
<CustomField>
    <fullName>ShippingCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>配送会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>定期便情報 (配送会社)</relationshipLabel>
    <relationshipName>RegularServiceInformationSCompanyList</relationshipName>
    <type>Lookup</type>
</CustomField>