force-app/main/default/objects/RegularServiceInformation__c/fields/ShippingFeeManualFlag__c.field-meta.xml
<CustomField>
    <fullName>ShippingFeeManualFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>運賃手動計算フラグ</label>
    <type>Checkbox</type>
</CustomField>