force-app/main/default/objects/RegularServiceInformation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reception</fullName>
                <default>true</default>
                <label>受付</label>
            </value>
            <value>
                <fullName>ReceptionCompleted</fullName>
                <label>受付確認済</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>