force-app/main/default/objects/RegularServiceInformation__c/fields/SubcontractFee__c.field-meta.xml
<CustomField>
    <fullName>SubcontractFee__c</fullName>
    <label>下請け運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>