force-app/main/default/objects/RegularServiceInformation__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>木曜日</label>
    <type>Checkbox</type>
</CustomField>