force-app/main/default/objects/RegularServiceInformation__c/fields/UnitForShippingFeeCal__c.field-meta.xml
<CustomField>
    <fullName>UnitForShippingFeeCal__c</fullName>
    <label>運賃計算用単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>ケース</label>
            </value>
            <value>
                <fullName>Pallet</fullName>
                <label>パレート</label>
            </value>
            <value>
                <fullName>Kou</fullName>
                <label>甲</label>
            </value>
            <value>
                <fullName>Ton</fullName>
                <label>トン</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>