force-app/main/default/objects/RegularServiceInformation__c/fields/VehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleNumber__c</fullName>
    <description>配車時に車番を設定します</description>
    <label>車番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>