force-app/main/default/objects/RegularServiceInformation__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>水曜日</label>
    <type>Checkbox</type>
</CustomField>