force-app/main/default/objects/RegularServiceInformation__c/validationRules/DateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DateCheck</fullName>
    <active>true</active>
    <description>「周期種別：月」の場合、毎月を選択してください。</description>
    <errorConditionFormula>/* 判定条件 */
ISPICKVAL( PeriodKind__c , &quot;Monthly&quot;)
&amp;&amp;
/* 判定項目 */
ISPICKVAL(Date__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>「周期種別：月」の場合、毎月を選択してください。</errorMessage>
</ValidationRule>