force-app/main/default/objects/RegularServiceInformation__c/validationRules/PeriodKindMonthCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PeriodKindMonthCheck</fullName>
    <active>true</active>
    <description>「周期種別：月」の場合、日付を選択してください。</description>
    <errorConditionFormula>/* 判定条件 */
ISPICKVAL( PeriodKind__c , &quot;Monthly&quot;)
&amp;&amp;
/* 判定項目 */
(Monday__c || Tuesday__c || Wednesday__c
|| Thursday__c || Friday__c || Saturday__c || Sunday__c)</errorConditionFormula>
    <errorMessage>「周期種別：月」の場合、日付を選択してください。</errorMessage>
</ValidationRule>