force-app/main/default/objects/RegularServiceInformation__c/validationRules/RecurringStartAndEndDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurringStartAndEndDateCheck</fullName>
    <active>true</active>
    <description>開始日は終了日より前の日付である必要があります。</description>
    <errorConditionFormula>RecurringStartDate__c &gt; RecurringEndDate__c</errorConditionFormula>
    <errorDisplayField>RecurringStartDate__c</errorDisplayField>
    <errorMessage>開始日は終了日より前の日付である必要があります。</errorMessage>
</ValidationRule>