force-app/main/default/objects/RegularServiceInformation__c/validationRules/RequireProductMasterOrItemName.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireProductMasterOrItemName</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ProductMaster__c) &amp;&amp; ISBLANK(ItemName__c)</errorConditionFormula>
    <errorMessage>「商品マスタ」または「品名」のいずれかを入力してください。</errorMessage>
</ValidationRule>