force-app/main/default/objects/RegularServiceInformation__c/validationRules/ShippingFeeManualFlagCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ShippingFeeManualFlagCheck</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */
 ShippingFeeManualFlag__c 
&amp;&amp;
/* 判定項目 */
 ISBLANK( AncillaryWorkFee__c ) 
&amp;&amp;
 ISBLANK(  UnitPrice__c ) 
&amp;&amp;
 ISBLANK(  Amount__c )</errorConditionFormula>
    <errorDisplayField>ShippingFeeManualFlag__c</errorDisplayField>
    <errorMessage>「運賃手動計算フラグ」を付けてから、「付帯作業費」、「単価」、「運賃」 を入力してください。</errorMessage>
</ValidationRule>