force-app/main/default/objects/RegularServiceInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Account__c</columns>
    <columns>TransportationMode__c</columns>
    <columns>ShippingCompany__c</columns>
    <columns>Destination__c</columns>
    <columns>UnitForShippingFeeCal__c</columns>
    <columns>QuantityForShippingFeeCal__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>Amount__c</columns>
    <columns>AncillaryWorkFee__c</columns>
    <columns>ShippingFeeManualFlag__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>Unit__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>